--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1105.0",
     "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
